--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="login-area">
-        <h1 class="text-center">Welcome to Pioneer Bank</h1>
+        <h1 class="text-center">Welcome  Bank</h1>
         <div class="submit-area">
             <h4>Login</h4>
             <input type="text" class="form-control" placeholder="Email">
@@ -60,7 +60,9 @@
                 </div>
             </div>
         </div>
+        
     </div>
+    
     <script>
         // login button event handler
         const loginBtn = document.getElementById("login");
